--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>SEO It - Welcome</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/seo-it.css">
-    <link rel="stylesheet" href="assets/css/animated.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="fontawesome.css">
+    <link rel="stylesheet" href="seo-it.css">
+    <link rel="stylesheet" href="animated.css">
+    <link rel="stylesheet" href="owl.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <h4>SEO it <img src="assets/images/logo-icon.png" alt=""></h4>
+              <h4>SEO it <img src="logo-icon.png" alt=""></h4>
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -101,7 +101,7 @@
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="assets/images/banner-right-image.png" alt="">
+                <img src="banner-right-image.png" alt="">
               </div>
             </div>
           </div>
@@ -250,7 +250,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="left-image wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.5s">
-            <img src="assets/images/about-left-image.png" alt="">
+            <img src="about-left-image.png" alt="">
           </div>
         </div>
         <div class="col-lg-6 align-self-center wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
@@ -303,7 +303,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="service-icon-01.png" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
@@ -320,7 +320,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
+                  <img src="service-icon-02.png" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
@@ -337,7 +337,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
+                  <img src="service-icon-03.png" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
@@ -354,7 +354,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-03.png" alt="">
+                  <img src="service-icon-03.png" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
@@ -371,7 +371,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-01.png" alt="">
+                  <img src="service-icon-01.png" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
@@ -388,7 +388,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="icon">
-                  <img src="assets/images/service-icon-02.png" alt="">
+                  <img src="service-icon-02.png" alt="">
                 </div>
               </div>
               <div class="col-lg-8">
@@ -456,19 +456,19 @@
                   <ul>
                     <li>
                       <div class="icon">
-                        <img src="assets/images/contact-icon-01.png" alt="email icon">
+                        <img src="contact-icon-01.png" alt="email icon">
                       </div>
                       <a href="#">info@seoit.com</a>
                     </li>
                     <li>
                       <div class="icon">
-                        <img src="assets/images/contact-icon-02.png" alt="phone">
+                        <img src="contact-icon-02.png" alt="phone">
                       </div>
                       <a href="#">061-445-0276</a>
                     </li>
                     <li>
                       <div class="icon">
-                        <img src="assets/images/contact-icon-03.png" alt="location">
+                        <img src="contact-icon-03.png" alt="location">
                       </div>
                       <a href="#">Johannesburg, South Africa</a>
                     </li>
@@ -488,19 +488,19 @@
         <div class="col-lg-12">
           <p>Copyright © 2024 SEO Dream Co., Ltd. All Rights Reserved. 
           
-          <br>Web Designed by <a rel="nofollow" href="https://samukelokhanya.github.io">Samukelo Khanya</a></p>
+          <br>Web Designed by <a rel="nofollow" href="https://godthenorth.github.io/samukelokhanya.github.io/">Samukelo Khanya</a></p>
         </div>
       </div>
     </div>
   </footer>
 
   <!-- Scripts -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/animation.js"></script>
-  <script src="assets/js/imagesloaded.js"></script>
-  <script src="assets/js/custom.js"></script>
+  <script src="jquery.min.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="owl-carousel.js"></script>
+  <script src="animation.js"></script>
+  <script src="imagesloaded.js"></script>
+  <script src="custom.js"></script>
 
 </body>
 </html>
