--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         <div class="col-lg-12">
           <p>Copyright © 2024 SEO Dream Co., Ltd. All Rights Reserved. 
           
-          <br>Web Designed by <a rel="nofollow" href="https://godthenorth.github.io/samukelokhanya.github.io/">Samukelo Khanya</a></p>
+          <br>Web Designed by <a rel="nofollow" href="https://cyberkru">CyberKRU</a></p>
         </div>
       </div>
     </div>
